# texdiv

./: CMakeLists.txt  README.md
data/: models.txt  models_small.txt
include/: cauchy_schwarz.h  cl_helper.h  gl_helper.h  kullack_leibller.h  texdiv.h
kernels/: weibull_kld.cl
shaders/: default.frag  default.vert  weibull_kld.frag
src/: cl_helper.cpp  gl_helper.cpp  kullback_leibller.cpp  main.cpp
